Ajuste de datos en pagina web

--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <h1>ready</h1>
+        <h1>ready <br>Jonathan Gamaliel Ortiz Rivera</h1>
     </header>
     <main>
         <section>
-            <h1>Bueno profe ya hice la tarea</h1>
+            <h1>19987235 <br>2° Desarrollo de Software A <br> DS</h1>
         </section>
         <section>
-            <h1>Que bonito esta git hub jajaja</h1>
+            <h1>Instituto Nacional San Luis <br> Codigo 11708 <br> Bachillerato tecnico vocacional</h1>
         </section>
         <article>
             <h2>Envieme su opinion profe jajaja</h2>
